--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,25 +14,25 @@
       <div class="form-text-wrap">
         <label class="form-text">Nickname</label>
       </div>
-      <%= f.textarea :nickname, placeholder: "e.g.: Johnny", class: "form-content", maxlength: "30" %>
+      <%= f.text_area :nickname, placeholder: "e.g. Johnny", class: "form-content", maxlength: "30" %>
     </div>
     <div class="form-group">
       <div class="form-text-wrap">
         <label class="form-text">Email</label>
       </div>
-      <%= f.email_field :email, placeholder: "e.g.: xxxxx@xxx.xxx", class: "form-content" %>
+      <%= f.email_field :email, placeholder: "e.g. xxxxx@xxx.xxx", class: "form-content" %>
     </div>
     <div class="form-group">
       <div class="form-text-wrap">
         <label class="form-text">Password</label>
       </div>
-      <%= f.password_field :pasword, placeholder: "8 characters or longer. At least 1 number." class: "form-content", %>
+      <%= f.password_field :pasword, placeholder: "8 characters or longer. At least 1 number.", class: "form-content" %>
     </div>
     <div class="form-group">
       <div class="form-text-wrap">
         <label class="form-text">Confirm password</label>
       </div>
-      <%= f.password_field :password_confirmation, placeholder: "Same pasword." class: "form-content" %>
+      <%= f.password_field :password_confirmation, placeholder: "Same pasword.", class: "form-content" %>
     </div>
     <div class="sign-up">
       <%= f.submit "Sign Up", class: "sign-up-button" %>
