--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,15 +6,13 @@
       </h1>
     </div>
 
-    <%# エラー発生時メッセージ表示 %>
-    <%# render 'shared/error_messages', model: f.object %>
-    <%# エラー発生時メッセージ表示 %>
+    <% render 'shared/error_messages', model: f.object %>
 
     <div class="form-group">
       <div class="form-text-wrap">
         <label class="form-text">Nickname</label>
       </div>
-      <%= f.text_area :nickname, placeholder: "e.g. Johnny", class: "form-content", maxlength: "30" %>
+      <%= f.text_field :nickname, placeholder: "e.g. Johnny", class: "form-content", maxlength: "30" %>
     </div>
     <div class="form-group">
       <div class="form-text-wrap">
