--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -1,15 +1,20 @@
-.sign-up-form {
+.background {
   height: 100vh;
+  background-color: #003366;
+}
+
+.sign-up-form {
   display: flex;
   justify-content: center;
-  align-items: center;
   background-color: #003366;
 }
 
 .form-wrap {
-  width: 500px;
+  width: 65%;
+  max-width: 500px;
   background-color: #003366;
   border: 1px solid white;
+  margin: 70px auto;
 }
 
 .form-header {
@@ -19,15 +24,16 @@
 }
 
 .form-group {
-  width: 380px;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
   padding-top: 30px;
 }
 
 .form-text-wrap {
   height: 25px;
+  width: 70%;
+  margin: 0 auto; 
 }
 
 .form-text {
@@ -38,6 +44,9 @@
 
 .form-content {
   height: 25px;
+  width: 70%;
+  margin: 0 auto;
+  display: block;
 }
 
 .sign-up {
