--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="background">
 <%= form_with model: @user, url: user_registration_path, class: "sign-up-form", local: true do |f| %>
   <div class="form-wrap">
     <div class="form-header">
@@ -6,7 +7,7 @@
       </h1>
     </div>
 
-    <% render 'shared/error_messages', model: f.object %>
+    <%= render 'shared/error_messages', model: f.object %>
 
     <div class="form-group">
       <div class="form-text-wrap">
@@ -24,7 +25,7 @@
       <div class="form-text-wrap">
         <label class="form-text">Password</label>
       </div>
-      <%= f.password_field :pasword, placeholder: "8 characters or longer. At least 1 number.", class: "form-content" %>
+      <%= f.password_field :password, placeholder: "8 characters or longer. At least 1 number.", class: "form-content" %>
     </div>
     <div class="form-group">
       <div class="form-text-wrap">
@@ -37,3 +38,4 @@
     </div>
   </div>
 <% end %>
+</div>
