--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -6,13 +6,13 @@
     <div class="navbar">
       <% if user_signed_in? %>
         <ul class="nav-lists">
-          <li><%= link_to current_user.nickname, "#" %></li>
-          <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+          <li><%= link_to current_user.nickname, "#", class: "nav-piece" %></li>
+          <li><%= button_to "Logout", destroy_user_session_path, method: :delete, class: "nav-piece" %></li>
         </ul>
       <% else %>
         <ul class="nav-lists">
-          <li><%= link_to "Login", new_user_session_path %></li>
-          <li><%= link_to "Sign Up", new_user_registration_path %></li>
+          <li><%= button_to "Login", new_user_session_path, method: :get, class: "nav-piece" %></li>
+          <li><%= button_to "Sign Up", new_user_registration_path, method: :get, class: "nav-piece" %></li>
         </ul>
       <% end %>
     </div>
