--- a/app/views/words/new.html.erb
+++ b/app/views/words/new.html.erb
@@ -4,6 +4,9 @@
       Post Word Info.
     </h1>
   </div>
+
+  <%= render 'shared/word_error_messages', model: f.object %>
+
   <div class="post-contents"></div>
     <div class="word-kana-wrap">
       <div class="kana-form-title">kana</div>
