--- a/app/assets/stylesheets/words/new.css
+++ b/app/assets/stylesheets/words/new.css
@@ -19,6 +19,13 @@
 
 .word-kana-wrap, .word-kanji-wrap, .word-english-wrap, .word-class-wrap, .image {
   margin-bottom: 20px;
+  width: 60%;
+}
+
+.title-wrap {
+  width: 100%;
+  display: flex;
+  align-items: baseline;
 }
 
 .kana-form-title, .kanji-form-title, .english-form-title, .class-form-title, .explanation-form-title, .image-form-title {
@@ -26,16 +33,22 @@
   margin-bottom: 5px;
 }
 
+.word-required {
+  font-size: 11px;
+  color: red;
+  margin-left: 10px;
+}
+
 .kana-text, .kanji-text, .english-text, .pos-select {
   height: 25px; 
-  width: 60%;
+  width: 100%;
   border: 2px solid black;
   border-radius: 5px;
 }
 
 .class-select {
   height: 30px; 
-  width: 61%;
+  width: 50%;
   border: 2px solid black;
   border-radius: 5px;
 }
@@ -49,16 +62,16 @@
 
 /* 投稿ボタン */
 .post {
-  width: 150px;
+  width: 180px;
   margin: 20px auto 0;
   display: flex;
   justify-content: space-around;
-
+  align-items: center;
 }
 
-.post-button, .back-button {
-  height: 31px;
-  width: 71px;
+.post-button{
+  height: 30px;
+  width: 70px;
   color: white;
   font-weight: bold;
   background-color: #003366;
@@ -66,10 +79,18 @@
 }
 
 .back-button {
-  height: 30px;
-  width: 70px;
-  color: #003366;
+  height: 26px;
+  width: 68px;
+  font-size: 13px;
   font-weight: bold;
+  color: #003366;
   background-color: white;
   border-radius: 5px;
+  border-top: 2px solid gray; border-left: 2px solid gray;
+  border-bottom: 2px solid black; border-right: 2px solid black;
+  text-decoration: none;
+  text-align: center;
+  line-height: 27px;
 }
+
+
