--- a/app/views/words/new.html.erb
+++ b/app/views/words/new.html.erb
@@ -9,19 +9,29 @@
 
   <div class="post-contents"></div>
     <div class="word-kana-wrap">
-      <div class="kana-form-title">kana</div>
+      <div class="title-wrap">
+        <div class="kana-form-title">kana</div>
+        <span class="word-required">*required</span>
+      </div>
       <%= f.text_field :kana, class: "kana-text" %>
     </div>
     <div class="word-kanji-wrap">
-      <div class="kanji-form-title">kanji</div>
+      <div class="kanji-form-title">kanji
+      </div>
       <%= f.text_field :kanji, class: "kanji-text" %>
     </div>
     <div class="word-english-wrap">
-      <div class="english-form-title">english</div>
+      <div class="title-wrap">
+        <div class="english-form-title">english</div>
+        <span class="word-required">*required</span>
+      </div>
       <%= f.text_field :english, class: "english-text" %>
     </div>
     <div class="word-class-wrap">
-      <div class="class-form-title">word class</div>
+      <div class="title-wrap">
+        <div class="class-form-title">word class</div>
+        <span class="word-required">*required</span>
+      </div>
       <%= f.collection_select(:word_class_id, WordClass.all, :id, :name, {}, {class: "class-select"}) %>
     </div>
     <div class="image">
@@ -29,12 +39,15 @@
       <%= f.file_field :image, class: "image-button"%>
     </div>
     <div class="explanation">
-      <div class="explanation-form-title">explanation</div>
+      <div class="title-wrap">
+        <div class="explanation-form-title">explanation</div>
+        <span class="word-required">*required</span>
+      </div>
       <%= f.text_area :explanation, class:"explanation-text" %>
     </div>
   </div>
   <div class="post">
     <%= f.submit "Post", class:"post-button" %>
-    <%= button_to "Back", words_path, class:"back-button" %>
+    <%= link_to "Back", words_path, class:"back-button" %>
   </div>
 <% end %>
