--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -44,7 +44,7 @@
   <div id="tagcloud", class="tag-cloud">
     <ul>
       <% @words.each do |w| %>
-        <li><%= link_to w.kana, "#", class: "tagcloud-piece" %></li>
+        <li><%= link_to w.kana, word_path(w.id), class: "tagcloud-piece" %></li>
       <% end %>
     </ul>
   </div>
