--- a/app/views/words/edit.html.erb
+++ b/app/views/words/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @word, url: words_path, class: "word-edit", local: true do |f| %>
+<%= form_with model: @word, url: word_path(@word.id), class: "word-edit", local: true do |f| %>
   <div class="edit-header">
     <h1 class="edit-header-text">
       Edit Word Info.
@@ -48,6 +48,6 @@
   </div>
   <div class="edit">
     <%= f.submit "Edit", class:"post-button" %>
-    <%= link_to "Back", words_path, class:"back-button" %>
+    <%= link_to "Cancel", word_path(@word.id), class:"back-button" %>
   </div>
 <% end %>
