--- a/app/views/words/edit.html.erb
+++ b/app/views/words/edit.html.erb
@@ -47,7 +47,7 @@
     </div>
   </div>
   <div class="edit">
-    <%= f.submit "Edit", class:"post-button" %>
-    <%= link_to "Cancel", word_path(@word.id), class:"back-button" %>
+    <%= f.submit "Edit", class:"edit-post-button" %>
+    <%= link_to "Cancel", word_path(@word.id), class:"cancel-button" %>
   </div>
 <% end %>
