--- a/app/assets/stylesheets/words/edit.css
+++ b/app/assets/stylesheets/words/edit.css
@@ -69,7 +69,7 @@
   align-items: center;
 }
 
-.post-button{
+.edit-post-button{
   height: 30px;
   width: 70px;
   color: white;
@@ -78,7 +78,7 @@
   border-radius: 5px;
 }
 
-.back-button {
+.cancel-button {
   height: 26px;
   width: 68px;
   font-size: 13px;
