--- a/app/views/words/show.html.erb
+++ b/app/views/words/show.html.erb
@@ -34,7 +34,7 @@
         <%= @word.kana %>
       </div>
       <div class="info-edit-button">
-        <% if @word.user_id == current_user.id %>
+        <% if user_signed_in? && @word.user_id == current_user.id %>
           <%= link_to image_tag('edit_button.png', class:"edit-button"), edit_word_path(@word.id) %>
           <%= link_to image_tag('delete_button.png', class:"edit-button"), word_path(@word.id), method: :delete, data: {confirm: "Do you really want to delete this word-info?"} %>
         <% end %>
