--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -6,6 +6,7 @@
     <div class="navbar">
       <% if user_signed_in? %>
         <ul class="nav-lists">
+          <li><%= link_to "MyPage", user_path(current_user.id), class: "nav-piece" %></li>
           <li><%= link_to "Post", new_word_path, class: "nav-piece" %></li>
           <li><%= link_to current_user.nickname, "#", class: "nav-piece" %></li>
           <li><%= button_to "Logout", destroy_user_session_path, method: :delete, class: "nav-piece" %></li>
