MyPage詳細からの編集・削除機能

--- a/app/assets/stylesheets/words/index.css
+++ b/app/assets/stylesheets/words/index.css
@@ -56,7 +56,7 @@ li {
 
 /* 検索条件 */
 .search-filtering {
-  position: relative; 選択ボックスの位置指定
+  position: relative; /* 選択ボックスの位置指定 */
   display: block; /* ブロックレベル要素化にする */
   width: 150px; /* ボックスの高さを指定する */
   border: 2px solid #003366;/* ボックスの境界線を実線で指定する */
