--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,8 +27,8 @@
         </div>   
     <% end %>
     <div class="my-words-buttons">
-      <%= link_to image_tag('edit_button.png', class:"my-words-edit-button"), from_mypage_edit_word_path(word.id) %>
-      <%= link_to image_tag('delete_button.png', class:"my-words-edit-button"), from_mypage_destroy_word_path(word.id), method: :delete, data: {confirm: "Do you really want to delete this word-info?"} %>
+      <%= link_to image_tag('edit_button.png', class:"my-words-edit-button"), edit_word_path(word.id) %>
+      <%= link_to image_tag('delete_button.png', class:"my-words-edit-button"), myword_destroy_word_path(word.id), method: :delete, data: {confirm: "Do you really want to delete this word-info?"} %>
     </div>
   <% end %>
   </div>
