--- a/app/views/words/show.html.erb
+++ b/app/views/words/show.html.erb
@@ -5,8 +5,9 @@
         <%= @word.kana %>
       </div>
       <div class="info-edit-button">
-        <%= link_to image_tag('edit_button.png', class:"edit-button"), edit_word_path(@word.id) %>
-        <%= link_to image_tag('delete_button.png', class:"edit-button"), @delete_path, method: :delete, data: {confirm: "Do you really want to delete this word-info?"} %>
+        <%= render partial: 'favorites/favorite' %>
+        <div><%= link_to image_tag('edit_button.png', class:"edit-button"), edit_word_path(@word.id) %></div>
+        <div><%= link_to image_tag('delete_button.png', class:"edit-button"), @delete_path, method: :delete, data: {confirm: "Do you really want to delete this word-info?"} %></div>
       </div>
     </div>
   </div>
