--- a/app/assets/stylesheets/words/show.css
+++ b/app/assets/stylesheets/words/show.css
@@ -21,10 +21,15 @@
   justify-content: end;
 }
 
-img.edit-button, .star-button {
+img.edit-button {
   width: 30px;
   height: 30px;
   margin-left: 5px;
+}
+
+.info-edit-button img.star-button {
+  width: 30px;
+  height: 30px;
 }
 
 /* word contents */
