--- a/app/views/favorites/destroy.js.erb
+++ b/app/views/favorites/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#star-<%= @word.id%>").html("<%= j(render partial: 'favorites/favorite') %>");
+$("#star-<%= @word.id%>").html("<%= j(render partial: 'favorites/favorite', locals: { word: @word }) %>");
