--- a/app/assets/stylesheets/favorites/index.css
+++ b/app/assets/stylesheets/favorites/index.css
@@ -6,15 +6,26 @@
 .favorites-header {
   width: 100%;
   margin: 50px auto;
+  border-bottom: 5px solid #003366;
+  display: flex;
+  justify-content: space-between;
 }
 
 .favorites-title {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: bold;
-  border-bottom: 5px solid #003366;
-  margin: 0 auto;
 }
 
+.reload-box {
+  display: flex;
+  align-items: center;
+}
+
+img.reload-button {
+  width: 30px;
+  height: 30px;
+  display: block;
+}
 
 .favorites-piece {
   width: 100%;
