お気に入り一覧削除非同期

--- a/app/views/favorites/destroy.js.erb
+++ b/app/views/favorites/destroy.js.erb
@@ -1,1 +1,2 @@
 $("#star-<%= @word.id%>").html("<%= j(render partial: 'favorites/favorite', locals: { word: @word }) %>");
+$("#favorites-word-<%= @word.id %>").remove();
