--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -7,29 +7,31 @@
   </div>
   <div class="wrap">
   <% @favorites.each do |word| %>
-    <%= link_to word_path(word.word.id), class:"favorites-piece" do %> 
-        <div class="favorites-japanese" %>
-          <div class="favorites-kana">
-            <%= word.word.kana %>
+    <div id="favorites-word-<%= word.word.id %>">
+      <%= link_to word_path(word.word.id), class:"favorites-piece" do %> 
+          <div class="favorites-japanese" %>
+            <div class="favorites-kana">
+              <%= word.word.kana %>
+            </div>
+            <% if word.word.kanji.present? %>
+              <div class="favorites-kanji">
+                <%= word.word.kanji %>
+              </div>
+            <% else %>
+              <div class="favorites-kanji">
+                ---
+              </div>
+            <% end %>
           </div>
-          <% if word.word.kanji.present? %>
-            <div class="favorites-kanji">
-              <%= word.word.kanji %>
-            </div>
-          <% else %>
-            <div class="favorites-kanji">
-              ---
-            </div>
-          <% end %>
+          <div class="favorites-english">
+            <%= word.word.english %>
+          </div>   
+      <% end %>
+      <div class="favorites-piece-below" id="ss">
+        <span class="favorites-piece-author">by <%= word.word.user.nickname %></span>
+        <div class="favorites-piece-star" >
+        <%= link_to image_tag('close_button.png', class:"star-button"), word_favorite_path(word.word.id, Favorite.find_by(word_id: word.word.id)), method: :delete, remote: true %>
         </div>
-        <div class="favorites-english">
-          <%= word.word.english %>
-        </div>   
-    <% end %>
-    <div class="favorites-piece-below" id="ss">
-      <span class="favorites-piece-author">by <%= word.word.user.nickname %></span>
-      <div class="favorites-piece-star", id="star-<%= word.word.id %>">
-      <%= render partial: 'favorites/favorite', locals: { word: word.word } %>
       </div>
     </div>
   <% end %>
