--- a/app/views/words/show.html.erb
+++ b/app/views/words/show.html.erb
@@ -4,7 +4,7 @@
       <div class="info-header-text">
         <%= @word.kana %>
       </div>
-      
+      <% if user_signed_in? %>
       <div class="info-edit-button" id="shs">
         <%= render partial: 'favorites/favorite' , locals: { word: @word }%>
         <% if @word.user_id == current_user.id %>
@@ -12,6 +12,7 @@
           <div><%= link_to image_tag('delete_button.png', class:"edit-button"), @delete_path, method: :delete, data: {confirm: "Do you really want to delete this word-info?"} %></div>
         <% end %>
       </div>
+      <% end %>
     </div>
   </div>
   <div class="info-upper">
