--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,12 @@
 <div class="my-posts-wrap">
   <div class="my-words">
     <div class="my-words-header">
-      MyPosts
+      My Posts
     </div>
     <div class="sort-form">
       <%= form_with(url: user_path(current_user.id), local: true, method: :get, class:"sort-form") do |form| %>
-        <label class="sort-filtering"><%= form.select :sort_method, [["Newest to Oldest", "sort_created_desc"], ["Oldest to Newest", "sort_created_asc"], ["あ to ん", "kana_asc"], ["ん to あ", "kana_desc"]] %></label>
-        <%= form.submit "Sort", class:"sort-button" %>
+        <label class="sort-filtering"><%= form.select :sort_method, options_for_select([["Newest to Oldest", "sort_created_desc"], ["Oldest to Newest", "sort_created_asc"], ["あ to ん", "kana_asc"], ["ん to あ", "kana_desc"]], params[:sort_method]), class:"sort-select" %></label>
+        <%= image_submit_tag("sort_button.png", class:"sort-button") %>
       <% end %>
     </div>
   </div>
