--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -3,11 +3,14 @@
     <div class="favorites-title">
       My Favorites
     </div>
-    <div class="sort-form">
-      <%= form_with(url: user_favorites_path(current_user.id), local: true, method: :get, class:"sort-form") do |form| %>
-        <label class="sort-filtering"><%= form.select :sort_method, options_for_select([["Newest to Oldest", "sort_created_desc"], ["Oldest to Newest", "sort_created_asc"], ["あ to ん", "kana_asc"], ["ん to あ", "kana_desc"]], params[:sort_method]), class:"sort-select" %></label>
-        <%= image_submit_tag("sort_button.png", class:"sort-button") %>
-      <% end %>
+    <div class="favorite-header-right">
+      <%= link_to image_tag('csv_button.png', class:"csv-button"),user_favorites_path(format: :csv) %>
+      <div class="sort-form">
+        <%= form_with(url: user_favorites_path(current_user.id), local: true, method: :get, class:"sort-form") do |form| %>
+          <label class="sort-filtering"><%= form.select :sort_method, options_for_select([["Newest to Oldest", "sort_created_desc"], ["Oldest to Newest", "sort_created_asc"], ["あ to ん", "kana_asc"], ["ん to あ", "kana_desc"]], params[:sort_method]), class:"sort-select" %></label>
+          <%= image_submit_tag("sort_button.png", class:"sort-button") %>
+        <% end %>
+      </div>
     </div>
   </div>
   <div class="wrap">
