ヘッダーviewファイル配置

--- a/app/views/words/new.html.erb
+++ b/app/views/words/new.html.erb
@@ -1,3 +1,5 @@
+<%= render "shared/header" %>
+
 <%= form_with model: @word, url: words_path, class: "word-registration", local: true do |f| %>
   <div class="post-header">
     <h1 class="post-header-text">
