--- a/app/views/words/edit.html.erb
+++ b/app/views/words/edit.html.erb
@@ -1,3 +1,5 @@
+<%= render "shared/header" %>
+
 <%= form_with model: @word, url: @path, class: "word-edit", local: true do |f| %>
   <div class="edit-header">
     <h1 class="edit-header-text">
