--- a/app/views/words/search.html.erb
+++ b/app/views/words/search.html.erb
@@ -1,3 +1,5 @@
+<%= render "shared/header" %>
+
 <div class="search-results-wrap">
   <div class="searching-word">
     <div class="search-word-text">
