--- a/app/assets/stylesheets/words/header.css
+++ b/app/assets/stylesheets/words/header.css
@@ -7,51 +7,110 @@
   align-items: center;
 }
 
-.heading {
+.header-left {
   width: 50%;
 }
 
-.app-name {
+.app-title {
   font-size: 30px;
   font-weight: bold;
   color: white;
   margin-left: 15px;
+  text-decoration: none;
 }
 
-.navbar {
+.header-right {
   width: 50%;
 }
 
-.nav-lists {
+.header-right-lists {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
 }
 
-li {
+.user_name {
+  font-size: 25px;
+  font-weight: bold;
+  color: white;
+}
+
+.header-right-lists li {
   list-style: none;
   margin-right: 15px;
+  position: relative;
 }
 
-.nav-piece {
+.header-right-sub {
   font-size: 14px;
   font-weight: bold;
   color: #003366;
-  background-color: white;
+  background-color: lightgray;
   text-decoration: none;
-  padding: 3px;
+  padding: 5px 10px;
+  display: block;
+}
+
+.header-right-lists li .sub-my-page {
+  position: absolute;
+  left: -121px;
+}
+
+.header-right-lists li .sub-out {
+  position: absolute;
+  left: -76px;
+}
+
+.header-right-lists li .sub-in {
+  position: absolute;
+  left: -83px;
+}
+
+.header-right-lists li ul li {
+  height: 0;
+  overflow: hidden;
+}
+
+.header-right-lists li:hover .sub-my-page li{
+  overflow: visible;
+  height: 30px;
+  width: 118px;
+  background-color: lightgray;
+}
+
+.header-right-lists li:hover .sub-out li{
+  overflow: visible;
+  height: 15px;
+  background-color: lightgray;
+}
+
+.header-right-lists li:hover .sub-in li{
+  overflow: visible;
+  height: 30px;
+  width: 80px;
+  background-color: lightgray;
+}
+
+.header-right-button {
+  height: 25px;
+  width: 25px;
+  border: 3px solid white;
   border-radius: 5px;
+  padding: 3px;
+  display: block;
 }
 
 /* 検索フォーム */
 .header-lower {
   min-width: 700px;
-  padding: 10px 15px 0 0;
+
 }
 
 .search-form {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  margin: 10px 15px 0 0;
 }
 
 /* 検索条件 */
@@ -105,9 +164,10 @@ select {
 }
 
 .search-button {
-  height: 36px;
-  color: white;
-  background-color: #003366;
+  height: 24px;
+  width:24px;
+  padding: 3px;
+  border: 3px solid #003366;
   border-radius: 5px;
   margin-left: 3px;
 }
