--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,13 +9,13 @@
         <ul class="header-right-lists">
           <li class="user_name"><%= current_user.nickname %></li>
           <li><%= link_to image_tag('pen_button.png', class:"header-right-button"), new_word_path %></li>
-          <li><%= link_to image_tag('my_page_button.png', class:"header-right-button") %>
+          <li><%= image_tag 'my_page_button.png', class:"header-right-button" %>
             <ul class="sub-my-page"> 
               <li><%= link_to "My Posts", user_path(current_user.id), class: "header-right-sub" %></li> 
               <li><%= link_to "My Favorites", user_favorites_path(current_user.id), class: "header-right-sub" %></li>
             </ul>
           </li>
-          <li><%= link_to image_tag('key_button.png', class:"header-right-button") %>
+          <li><%= image_tag 'key_button.png', class:"header-right-button" %>
             <ul class="sub-out">
               <li><%= link_to "Logout", destroy_user_session_path, method: :delete, class:"header-right-sub" %></li>
             </ul>
@@ -23,7 +23,7 @@
         </ul>
       <% else %>
         <ul class="header-right-lists">
-          <li><%= link_to image_tag('key_button.png', class:"header-right-button") %>
+          <li><%= image_tag 'key_button.png', class:"header-right-button" %>
             <ul class="sub-in">
               <li><%= link_to "Login", new_user_session_path, method: :get, class: "header-right-sub" %></li>
               <li><%= link_to "Sign Up", new_user_registration_path, method: :get, class: "header-right-sub" %></li>
