--- a/app/assets/stylesheets/shared/error_messages.css
+++ b/app/assets/stylesheets/shared/error_messages.css
@@ -2,11 +2,25 @@
   display: flex;
   justify-content: center;
   margin-bottom: 5vh;
+  padding-left: 20px;
 }
 
 .error-message {
-  font-size: 1.3vw;
+  font-size: 15px;
   list-style: circle;
   color:white;
   background-color: #003366;
+}
+
+@media (max-width: 500px) {
+  .error-alert {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 3vh;
+    padding-left: 10px;
+  }
+
+  .error-message {
+    font-size: 12px;
+  }
 }
