--- a/app/assets/stylesheets/user/login.css
+++ b/app/assets/stylesheets/user/login.css
@@ -17,13 +17,16 @@
   margin: 70px auto;
 }
 
-.form-header {
+.form-header-text {
   text-align: center;
-  font-size: 15px;
+  font-size: 25px;
+  font-weight: bold;
   color: white;
+  margin: 30px 0 10px 0;
 }
 
 .login-flash-message {
+  font-size: 15px;
   color: white;
   text-align: center;
 }
@@ -42,7 +45,7 @@
 }
 
 .form-text {
-  font-size: 13px;
+  font-size: 15px;
   font-weight: bold;
   color: white;
 }
@@ -67,4 +70,53 @@
   font-weight: bold;
   background-color: white;
   border-radius: 5px;
+}
+
+/* responsive */
+@media (max-width: 500px) {
+
+  .form-wrap {
+    width: 90%;
+  }
+
+  .form-header-text {
+    font-size: 20px;
+    margin: 20px 0 10px 0;
+  }
+
+  .login-flash-message {
+    font-size: 12px;
+  }
+
+  .form-group {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 25px;
+  }
+
+  .form-text-wrap {
+    height: 25px;
+    width: 90%;
+  }
+
+  .form-text {
+    font-size: 12px;
+  }
+
+  .form-content {
+    height: 25px;
+    width: 90%;
+  }
+
+  .login {
+    margin: 30px 0 20px 0;
+  }
+
+  .login-button {
+    height: 20px;
+    width: 60px;
+    font-size: 10px;
+    border-radius: 5px;
+  }
 }
