--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -11,16 +11,17 @@
 
 .form-wrap {
   width: 65%;
-  max-width: 500px;
   background-color: #003366;
   border: 1px solid white;
-  margin: 70px auto;
+  margin: 10vh auto;
 }
 
-.form-header {
+.form-header-text {
   text-align: center;
-  font-size: 15px;
+  font-size: 25px;
+  font-weight: bold;
   color: white;
+  margin: 30px 0 20px 0;
 }
 
 .form-group {
@@ -37,7 +38,7 @@
 }
 
 .form-text {
-  font-size: 13px;
+  font-size: 15px;
   font-weight: bold;
   color: white;
 }
@@ -47,6 +48,11 @@
   width: 70%;
   margin: 0 auto;
   display: block;
+}
+
+.form-content::placeholder {
+  font-size: 15px;
+  padding-left: 5px;
 }
 
 .sign-up {
@@ -62,4 +68,53 @@
   font-weight: bold;
   background-color: white;
   border-radius: 5px;
+}
+
+/* responsive */
+@media (max-width: 500px) {
+
+  .form-wrap {
+    width: 90%;
+  }
+
+  .form-header-text {
+    font-size: 20px;
+    margin: 20px 0 10px 0;
+  }
+
+  .form-group {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 25px;
+  }
+
+  .form-text-wrap {
+    height: 25px;
+    width: 90%;
+  }
+
+  .form-text {
+    font-size: 12px;
+  }
+
+  .form-content {
+    height: 25px;
+    width: 90%;
+  }
+
+  .form-content::placeholder {
+    font-size: 12px;
+  }
+
+  .sign-up {
+    margin: 30px 0 20px 0;
+  }
+
+  .sign-up-button {
+    height: 20px;
+    width: 60px;
+    font-size: 10px;
+    border-radius: 5px;
+  }
 }
