--- a/app/assets/stylesheets/words/index.css
+++ b/app/assets/stylesheets/words/index.css
@@ -19,25 +19,17 @@
   -webkit-text-fill-color: transparent; */
 }
 
+/* app introduction */
 .about {
-background-color: #003366;
-padding-bottom: 10px;
+  background-color: #003366;
+  padding: 30px 0;
+  min-width: 700px;
 }
 
-.about-contents {
+.about-box {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-}
-
-.info-left {
-  width: 40%;
-  font-size: 20px;
-  text-align: justify;
-  line-height: 30px;
-  color: white;
-  word-break: normal;
-  font-family: 'Times New Roman', Times, serif;
 }
 
 .info-title {
@@ -45,7 +37,7 @@ padding-bottom: 10px;
   font-style: italic;
 }
 
-.info-right {
+.info-contents {
   width: 40%;
   font-size: 20px;
   text-align: justify;
@@ -56,7 +48,7 @@ padding-bottom: 10px;
 }
 
 .member-buttons {
-  margin-bottom: 50px;
+  margin-top: 70px;
 }
 
 .register-link-button {
@@ -72,7 +64,7 @@ padding-bottom: 10px;
   border-radius: 5px;
   padding: 10px;
   display: block;
-  margin: 50px auto 0;
+  margin: 0 auto;
 }
 
 .login-link-button {
@@ -91,9 +83,41 @@ padding-bottom: 10px;
   margin: 30px auto 0;
 }
 
+footer {
+  height:30px;
+  min-width: 700px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .top-copyright {
   color: #003366;
   font-size: 13px;
   font-weight: bold;
-  text-align: center;
 }
+
+@media (max-width: 500px) {
+  .info-contents {
+    width: 80%;
+    margin-bottom: 30px; 
+  }
+
+  .member-buttons {
+    margin-top: 40px;
+  }
+}
+
+/* top page after logging in */
+.top-info {
+  background-color: #003366;
+  padding: 30px 0;
+  min-width: 700px;
+}
+
+.top-info-box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
