--- a/app/assets/stylesheets/words/new.css
+++ b/app/assets/stylesheets/words/new.css
@@ -1,12 +1,16 @@
 /* フォーム全体 */
+.post-wrap {
+  min-width: 700px;
+}
+
 .word-registration {
   width: 50%;
   margin: 50px auto;
-
 }
 
 .post-header-text {
   font-size: 20px;
+  font-weight: bold;
   color: #003366;
   border-bottom: 4px solid #003366;
   margin: 0 auto;
@@ -62,10 +66,9 @@
 
 /* 投稿ボタン */
 .post {
-  width: 180px;
-  margin: 20px auto 0;
+  min-width: 700px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 
@@ -76,6 +79,7 @@
   font-weight: bold;
   background-color: #003366;
   border-radius: 5px;
+  margin-right: 10px;
 }
 
 .back-button {
@@ -91,6 +95,18 @@
   text-decoration: none;
   text-align: center;
   line-height: 27px;
+  margin-left: 10px;
 }
 
+/* responsive */
+@media (max-width: 1100px) {
+  .word-registration {
+    width:70%;
+  }
+}
 
+@media (max-width: 500px) {
+  .word-registration {
+    width:80%;
+  }
+}
