フッター配置

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,23 @@
  *= require_tree .
  *= require_self
  */
+
+.main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+footer {
+  margin-top: auto;
+}
+
+@media (max-width: 500px) {
+  .main {
+    min-height: 100vh;
+  }
+
+  footer {
+    margin-top: auto;
+  }
+}
