タグクラウドのレスポンシブ対応

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,8 @@
 .main {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  min-width: 700px;
   min-height: 100vh;
 }
 
@@ -26,7 +28,7 @@ footer {
 
 @media (max-width: 500px) {
   .main {
-    min-height: 100vh;
+    min-width: 0px;
   }
 
   footer {
