--- a/app/assets/stylesheets/words/show.css
+++ b/app/assets/stylesheets/words/show.css
@@ -1,6 +1,6 @@
 .word-info {
   width: 70%;
-  min-width: 700px;
+  /* min-width: 700px; */
   margin: 50px auto 100px;
 }
 
@@ -103,7 +103,6 @@ img.info-img-content {
 
 @media (max-width: 500px)
  {.word-info {
-  min-width: 380px;
  }
   .info-basic-box {
     width: 100%;
